force-app/main/default/objects/AddressDetail__c/AddressDetail__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>ADR-{0000000}</displayFormat>
        <label>Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>