force-app/main/default/objects/AddressDetail__c/fields/AddressLine__c.field-meta.xml
<CustomField>
    <fullName>AddressLine__c</fullName>
    <label>XAL AddressLine</label>
    <type>TextArea</type>
</CustomField>