force-app/main/default/objects/AddressDetail__c/fields/AdministrativeAreaCode__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeAreaCode__c</fullName>
    <label>XAL AdministrativeAreaCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>