force-app/main/default/objects/AddressDetail__c/fields/AdministrativeAreaDevName__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeAreaDevName__c</fullName>
    <label>XAL AdministrativeAreaDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>