force-app/main/default/objects/AddressDetail__c/fields/AdministrativeAreaName__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeAreaName__c</fullName>
    <label>XAL AdministrativeAreaName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>