force-app/main/default/objects/AddressDetail__c/fields/AdministrativeAreaType__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeAreaType__c</fullName>
    <label>XAL AdministrativeAreaType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>