force-app/main/default/objects/AddressDetail__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>XAL CountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>