force-app/main/default/objects/AddressDetail__c/fields/CountryDevName__c.field-meta.xml
<CustomField>
    <fullName>CountryDevName__c</fullName>
    <label>XAL CountryDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>