force-app/main/default/objects/AddressDetail__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>XAL CountryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>