force-app/main/default/objects/AddressDetail__c/fields/DAUM_Additional_Description_short_name__c.field-meta.xml
<CustomField>
    <fullName>DAUM_Additional_Description_short_name__c</fullName>
    <label>DAUM Additional Description short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>