force-app/main/default/objects/AddressDetail__c/fields/DAUM_Address_Model__c.field-meta.xml
<CustomField>
    <fullName>DAUM_Address_Model__c</fullName>
    <label>Address Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old Address</fullName>
            </value>
            <value>
                <fullName>New Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>