force-app/main/default/objects/AddressDetail__c/fields/DAUM_Building_Name_short_name__c.field-meta.xml
<CustomField>
    <fullName>DAUM_Building_Name_short_name__c</fullName>
    <label>DAUM Building Name short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>