force-app/main/default/objects/AddressDetail__c/fields/DAUM_Building_Number_long_name__c.field-meta.xml
<CustomField>
    <fullName>DAUM_Building_Number_long_name__c</fullName>
    <label>DAUM Building Number long name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>