force-app/main/default/objects/AddressDetail__c/fields/DAUM_Detailed_Address_short_name__c.field-meta.xml
<CustomField>
    <fullName>DAUM_Detailed_Address_short_name__c</fullName>
    <label>DAUM Detailed Address short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>