force-app/main/default/objects/AddressDetail__c/fields/DependentlocalityCode_1__c.field-meta.xml
<CustomField>
    <fullName>DependentlocalityCode_1__c</fullName>
    <label>XAL DependentlocalityCode 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>