force-app/main/default/objects/AddressDetail__c/fields/DependentlocalityCode_2__c.field-meta.xml
<CustomField>
    <fullName>DependentlocalityCode_2__c</fullName>
    <label>XAL DependentlocalityCode 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>