force-app/main/default/objects/AddressDetail__c/fields/DependentlocalityCode_3__c.field-meta.xml
<CustomField>
    <fullName>DependentlocalityCode_3__c</fullName>
    <label>XAL DependentlocalityCode 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>