force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityDevName_1__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityDevName_1__c</fullName>
    <label>XAL DependentLocalityDevName 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>