force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityDevName_2__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityDevName_2__c</fullName>
    <label>XAL DependentLocalityDevName 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>