force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityDevName_3__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityDevName_3__c</fullName>
    <label>XAL DependentLocalityDevName 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>