force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityName_1__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityName_1__c</fullName>
    <label>XAL DependentLocalityName 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>