force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityName_2__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityName_2__c</fullName>
    <label>XAL DependentLocalityName 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>