force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityName_3__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityName_3__c</fullName>
    <label>XAL DependentLocalityName 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>