force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityType_1__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityType_1__c</fullName>
    <label>XAL DependentLocalityType 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>