force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityType_2__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityType_2__c</fullName>
    <label>XAL DependentLocalityType 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>