force-app/main/default/objects/AddressDetail__c/fields/DependentLocalityType_3__c.field-meta.xml
<CustomField>
    <fullName>DependentLocalityType_3__c</fullName>
    <label>XAL DependentLocalityType 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>