force-app/main/default/objects/AddressDetail__c/fields/Global_Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Global_Additional_Description__c</fullName>
    <formula>DAUM_Additional_Description_long_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Additional Description</label>
    <type>Text</type>
</CustomField>