force-app/main/default/objects/AddressDetail__c/fields/Global_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Building_Name__c</fullName>
    <formula>CASE(Model__c, 
&quot;GPA&quot;, 
CASE(Global_Country_Code__c, 
&quot;KR&quot;, 
DAUM_Building_Name_long_name__c, 
&quot;&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Building Name</label>
    <type>Text</type>
</CustomField>