force-app/main/default/objects/AddressDetail__c/fields/Global_City_Area_Label_3__c.field-meta.xml
<CustomField>
    <fullName>Global_City_Area_Label_3__c</fullName>
    <formula>CASE(Model__c,
&quot;GPA&quot;,
 CASE(Global_Country_Code__c,
 &quot;KR&quot;,
 GPA_Sublocality_level_3_long_name__c,
 &quot;&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global City Area Label 3</label>
    <type>Text</type>
</CustomField>