force-app/main/default/objects/AddressDetail__c/fields/Global_City_Label__c.field-meta.xml
<CustomField>
    <fullName>Global_City_Label__c</fullName>
    <formula>CASE(Model__c, 
&quot;GPA&quot;,
CASE(Account__r.Record_Country__c ,
&quot;Hungary&quot;,
GPA_Locality_long_name__c,
&quot;Venezuela&quot;,
GPA_Locality_long_name__c,
&quot;Dominican Republic&quot;,
GPA_Locality_long_name__c,
&quot;Austria&quot;,
GPA_Locality_long_name__c,
&quot;Sweden&quot;,
GPA_Locality_long_name__c,
&quot;Finland&quot;,
GPA_Locality_long_name__c,
&quot;Korea&quot;,
GPA_Locality_long_name__c,
&quot;Uruguay&quot;,
GPA_Locality_short_name__c,
&quot;Czech Republic&quot;,
GPA_Locality_short_name__c,
&quot;&quot;
)
, 
&quot;XAL&quot;,
CASE(CountryCode__c,
&quot;BH&quot;,
AdministrativeAreaName__c,
&quot;JO&quot;,
AdministrativeAreaName__c,
&quot;SA&quot;,
AdministrativeAreaName__c,
&quot;KW&quot;,
AdministrativeAreaName__c,
&quot;LB&quot;,
AdministrativeAreaName__c,
&quot;OM&quot;,
AdministrativeAreaName__c,
&quot;QA&quot;,
AdministrativeAreaName__c,
&quot;EG&quot;,
AdministrativeAreaName__c,
&quot;AE&quot;,
AdministrativeAreaName__c,
&quot;PA&quot;,
SubAdministrativeAreaName__c,
&quot;PY&quot;,
SubAdministrativeAreaName__c,
&quot;BO&quot;,
SubAdministrativeAreaName__c,
&quot;AR&quot;,
SubAdministrativeAreaName__c,
&quot;CL&quot;,
SubAdministrativeAreaName__c,
&quot;HK&quot;,
AdministrativeAreaName__c,
&quot;LA&quot;,
AdministrativeAreaName__c,
&quot;KH&quot;,
AdministrativeAreaName__c,
&quot;PH&quot;,
AdministrativeAreaName__c,
&quot;TH&quot;,
AdministrativeAreaName__c,
&quot;BD&quot;,
AdministrativeAreaName__c,
&quot;MM&quot;,
AdministrativeAreaName__c,
&quot;SG&quot;,
AdministrativeAreaName__c,
&quot;MY&quot;,
AdministrativeAreaName__c,
&quot;TW&quot;,
AdministrativeAreaName__c,
&quot;JP&quot;,
AdministrativeAreaName__c,
&quot;CZ&quot;,
SubAdministrativeAreaName__c,
&quot;&quot;
)
,
&quot;&quot;)</formula>
    <label>Global City Label</label>
    <type>Text</type>
</CustomField>