force-app/main/default/objects/AddressDetail__c/fields/Global_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Country_Code__c</fullName>
    <description>Country ISO Alpha-2 code</description>
    <formula>CASE( Model__c, 
&quot;GPA&quot;, GPA_Country_short_name__c, 
&quot;XAL&quot;,  CountryCode__c,
&quot;&quot;)</formula>
    <label>Global Country Code</label>
    <type>Text</type>
</CustomField>