force-app/main/default/objects/AddressDetail__c/fields/Global_Country_Label__c.field-meta.xml
<CustomField>
    <fullName>Global_Country_Label__c</fullName>
    <description>Country label</description>
    <formula>CASE(Model__c, 
&quot;GPA&quot;,  GPA_Country_long_name__c, 
&quot;XAL&quot;,  CountryName__c,
&quot;&quot;)</formula>
    <label>Global Country Label</label>
    <type>Text</type>
</CustomField>