force-app/main/default/objects/AddressDetail__c/fields/Global_Detailed_Address__c.field-meta.xml
<CustomField>
    <fullName>Global_Detailed_Address__c</fullName>
    <formula>CASE(Model__c, 
&quot;GPA&quot;, 
CASE(Global_Country_Code__c, 
&quot;KR&quot;, 
DAUM_Detailed_Address_long_name__c, 
&quot;&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Detailed Address</label>
    <type>Text</type>
</CustomField>