force-app/main/default/objects/AddressDetail__c/fields/Global_District_Label__c.field-meta.xml
<CustomField>
    <fullName>Global_District_Label__c</fullName>
    <formula>CASE(Model__c,
&quot;XAL&quot;,
CASE(CountryCode__c,
&quot;HK&quot;,
SubAdministrativeAreaName__c,
&quot;SG&quot;,
SubAdministrativeAreaName__c,
&quot;&quot;
),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global District Label</label>
    <type>Text</type>
</CustomField>