force-app/main/default/objects/AddressDetail__c/fields/Global_Premise_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Premise_Code__c</fullName>
    <formula>CASE(Model__c,
&quot;GPA&quot;,
 CASE(Global_Country_Code__c,
 &quot;KR&quot;,
 GPA_Premise_short_name__c,
 &quot;&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Premise Code</label>
    <type>Text</type>
</CustomField>