force-app/main/default/objects/AddressDetail__c/fields/Global_State_Province_code__c.field-meta.xml
<CustomField>
    <fullName>Global_State_Province_code__c</fullName>
    <formula>CASE(Model__c, 
&quot;GPA&quot;,
CASE(GPA_Country_short_name__c,
&quot;DO&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;VE&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;DE&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;KR&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;AT&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;HU&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;SE&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;UY&quot;,
GPA_Admin_area_level_1_short_name__c,
&quot;&quot;
),
&quot;XAL&quot;,
CASE(CountryCode__c,
&quot;PA&quot;,
AdministrativeAreaCode__c,
&quot;PY&quot;,
AdministrativeAreaCode__c,
&quot;BO&quot;,
AdministrativeAreaCode__c,
&quot;HK&quot;,
AdministrativeAreaCode__c,
&quot;AR&quot;,
AdministrativeAreaCode__c,
&quot;CL&quot;,
AdministrativeAreaCode__c,
&quot;&quot;
),  
/* at this time XAL model does not include state or province  except PA,PY and BO */
&quot;&quot;)</formula>
    <label>Global State/Province code</label>
    <type>Text</type>
</CustomField>