force-app/main/default/objects/AddressDetail__c/fields/Global_State_Province_label__c.field-meta.xml
<CustomField>
    <fullName>Global_State_Province_label__c</fullName>
    <formula>CASE(Model__c, 
&quot;GPA&quot;, 
CASE(GPA_Country_short_name__c, 
&quot;DE&quot;,
GPA_Admin_area_level_1_long_name__c,
&quot;VE&quot;,
GPA_Admin_area_level_1_long_name__c,
&quot;HU&quot;, 
GPA_Admin_area_level_1_long_name__c,  
&quot;AT&quot;, 
GPA_Admin_area_level_1_long_name__c, 
&quot;SE&quot;, 
GPA_Admin_area_level_1_long_name__c,
&quot;DO&quot;, 
GPA_Admin_area_level_1_long_name__c,  
&quot;UY&quot;, 
GPA_Admin_area_level_1_long_name__c,
&quot;KR&quot;, 
GPA_Admin_area_level_1_long_name__c,  
&quot;&quot; 
), 
&quot;XAL&quot;, 
CASE(CountryCode__c, 
&quot;PA&quot;, 
AdministrativeAreaName__c, 
&quot;PY&quot;, 
AdministrativeAreaName__c, 
&quot;BO&quot;, 
AdministrativeAreaName__c, 
&quot;AR&quot;, 
AdministrativeAreaName__c, 
&quot;CL&quot;, 
AdministrativeAreaName__c, 
&quot;CZ&quot;, 
AdministrativeAreaName__c, 
&quot;&quot; 
), 
/* at this time XAL model does not include state or province except PA,PY and BO*/ 
&quot;&quot;)</formula>
    <label>Global State/Province label</label>
    <type>Text</type>
</CustomField>