force-app/main/default/objects/AddressDetail__c/fields/Global_Street_Label__c.field-meta.xml
<CustomField>
    <fullName>Global_Street_Label__c</fullName>
    <formula>CASE(Model__c,
&quot;GPA&quot;,
CASE(GPA_Country_short_name__c,
&quot;DE&quot;,
GPA_Route_long_name__c,
&quot;DO&quot;,
GPA_Route_long_name__c,
&quot;VE&quot;,
GPA_Route_long_name__c,
&quot;AT&quot;,
GPA_Route_long_name__c,
&quot;HU&quot;,
GPA_Route_long_name__c,
&quot;KR&quot;,
GPA_Route_long_name__c,
&quot;SE&quot;,
GPA_Route_long_name__c,
&quot;FI&quot;,
GPA_Route_long_name__c,
&quot;UY&quot;,
GPA_Route_long_name__c,
&quot;CZ&quot;,
GPA_Route_long_name__c,
&quot;&quot;
)
,
&quot;XAL&quot;,
CASE(CountryCode__c,
&quot;BH&quot;,
AddressLine__c,
&quot;JO&quot;,
AddressLine__c,
&quot;SA&quot;,
AddressLine__c,
&quot;KW&quot;,
AddressLine__c,
&quot;LB&quot;,
AddressLine__c,
&quot;EG&quot;,
AddressLine__c,
&quot;OM&quot;,
AddressLine__c,
&quot;QA&quot;,
AddressLine__c,
&quot;AR&quot;,
AddressLine__c,
&quot;CL&quot;,
AddressLine__c,
&quot;AE&quot;,
AddressLine__c,
&quot;PA&quot;,
AddressLine__c,
&quot;PY&quot;,
AddressLine__c,
&quot;BO&quot;,
AddressLine__c,
&quot;HK&quot;,
AddressLine__c,
&quot;LA&quot;,
AddressLine__c,
&quot;KH&quot;,
AddressLine__c,
&quot;MM&quot;,
AddressLine__c,
&quot;PH&quot;,
AddressLine__c,
&quot;TH&quot;,
AddressLine__c,
&quot;BD&quot;,
AddressLine__c,
&quot;SG&quot;,
AddressLine__c,
&quot;MY&quot;,
AddressLine__c,
&quot;TW&quot;,
AddressLine__c,
&quot;CZ&quot;,
AddressLine__c,
&quot;JP&quot;,
AddressLine__c,
&quot;&quot;
),
&quot;&quot;)</formula>
    <label>Global Street Label</label>
    <type>Text</type>
</CustomField>