force-app/main/default/objects/AddressDetail__c/fields/Global_Street_Number_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Street_Number_Code__c</fullName>
    <formula>CASE(Model__c,
&quot;GPA&quot;,
CASE(GPA_Country_short_name__c,
&quot;DE&quot;,
GPA_Street_number_long_name__c,
&quot;DO&quot;,
GPA_Street_number_long_name__c,
&quot;VE&quot;,
GPA_Street_number_long_name__c,
&quot;AT&quot;,
GPA_Street_number_long_name__c,
&quot;HU&quot;,
GPA_Street_number_long_name__c,
&quot;SE&quot;,
GPA_Street_number_long_name__c,
&quot;FI&quot;,
GPA_Street_number_long_name__c,
&quot;KR&quot;,
GPA_Street_number_long_name__c,
&quot;UY&quot;,
GPA_Street_number_long_name__c,
&quot;CZ&quot;,
GPA_Street_number_long_name__c,
&quot;&quot;
)
,
/* at this time XAL does not include street number */
&quot;&quot;)</formula>
    <label>Global Street Number Code</label>
    <type>Text</type>
</CustomField>