force-app/main/default/objects/AddressDetail__c/fields/GPA_Admin_area_level_1_long_name__c.field-meta.xml
<CustomField>
    <fullName>GPA_Admin_area_level_1_long_name__c</fullName>
    <label>GPA Admin area level 1 long name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>