force-app/main/default/objects/AddressDetail__c/fields/GPA_formatted_address__c.field-meta.xml
<CustomField>
    <fullName>GPA_formatted_address__c</fullName>
    <label>GPA formatted address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>