force-app/main/default/objects/AddressDetail__c/fields/GPA_Place_id__c.field-meta.xml
<CustomField>
    <fullName>GPA_Place_id__c</fullName>
    <label>GPA Place id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>